# Agentic-writer

./: .env.example  .gitignore  AGENTS.md  README.md  config.toml  package-lock.json  package.json  pyproject.toml  rapport_mcfadden.md
.github/workflows/: ci.yml
docs/: index.html
docs/diagrams/: 01-system-context.mmd  02-containers.mmd  03-studio-api-components.mmd  04-pipeline-components.mmd  05-studio-dynamic.mmd  06-pipeline-steps-dynamic.mmd  07-deployment.mmd  README.md
examples/briefs/: dossier-lumiere-noire.yaml  flash-smoke.yaml
scripts/: refresh_openai_pricing.py  run.sh
skills/_shared/: bestseller_mechanics_2026.md
skills/manuscript-editor/: SKILL.md
skills/print-layout/: SKILL.md
skills/story-architect/: SKILL.md
skills/story-auditor/: SKILL.md
skills/story-writer/: SKILL.md
specs/bdd/: 01_environment.feature  02_cli_generate.feature  03_pipeline_text.feature  04_export_imprimable.feature  05_e2e_live.feature  06_ag_ui_studio.feature  07_studio_threads.feature  README.md
src/agentic_writer/: __init__.py  agent_instructions.py  brief_io.py  cleanup.py  cli.py  config.py  doctor.py  docx_build.py  editorial_guards.py  editorial_io.py  editorial_models.py  editorial_plan.py  export_names.py  format_specs.py  io.py  log_config.py  models.py  openai_pricing.py  pipeline.py  pipeline_agents.py  pipeline_progress.py  pipeline_steps.py  rewrite_feedback.py  skill_content.py  skills.py  usage_cost.py
templates/: generate_from_md.js
tests/: conftest.py
tests/bdd/: test_ag_ui.py  test_cli.py  test_e2e.py  test_environment.py  test_export.py  test_pipeline_bdd.py  test_studio_threads.py
tests/evals/: __init__.py
tests/fixtures/: editor_flash.json  writer_flash.json
tests/integration/: test_ag_ui_endpoint.py  test_audit_rewrite.py  test_docx_build.py  test_pipeline.py
tests/support/: __init__.py  pipeline_mocks.py  studio_threads.py
web/: package-lock.json  package.json
(+76 files in other folders)
